--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,5 +3,10 @@ linters:
     - misspell
     - gosimple
     - govet
+issues:
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - errcheck
 run:
   timeout: 5m
