--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,3 +10,13 @@ builds:
       - CGO_ENABLED=0
 checksum:
   name_template: "checksums.txt"
+nfpms:
+  - file_name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Arch }}"
+    homepage: https://github.com/winebarrel/sev
+    maintainer: Genki Sugawara <sugawara@winebarrel.jp>
+    description: A tool that retrieves AWS Secrets Manager secret values, sets them to environment variables, and executes commands.
+    license: MIT
+    formats:
+      - deb
+      - rpm
+    bindir: /usr/bin
