--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,12 +1,18 @@
+version: "2"
 linters:
   enable:
     - misspell
-    - gosimple
-    - govet
-issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - errcheck
-run:
-  timeout: 5m
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - linters:
+          - errcheck
+        path: _test\.go
+formatters:
+  exclusions:
+    generated: lax
